<resources>
    <string name="month_long_standalone_january">January</string>
    <string name="month_long_standalone_february">February</string>
    <string name="month_long_standalone_march">March</string>
    <string name="month_long_standalone_april">April</string>
    <string name="month_long_standalone_may">May</string>
    <string name="month_long_standalone_june">June</string>
    <string name="month_long_standalone_july">July</string>
    <string name="month_long_standalone_august">August</string>
    <string name="month_long_standalone_september">September</string>
    <string name="month_long_standalone_october">October</string>
    <string name="month_long_standalone_november">November</string>
    <string name="month_long_standalone_december">December</string>
    <string name="month_long_january">January</string>
    <string name="month_long_february">February</string>
    <string name="month_long_march">March</string>
    <string name="month_long_april">April</string>
    <string name="month_long_may">May</string>
    <string name="month_long_june">June</string>
    <string name="month_long_july">July</string>
    <string name="month_long_august">August</string>
    <string name="month_long_september">September</string>
    <string name="month_long_october">October</string>
    <string name="month_long_november">November</string>
    <string name="month_long_december">December</string>
    <string name="month_medium_january">Jan</string>
    <string name="month_medium_february">Feb</string>
    <string name="month_medium_march">Mar</string>
    <string name="month_medium_april">Apr</string>
    <string name="month_medium_may">May</string>
    <string name="month_medium_june">Jun</string>
    <string name="month_medium_july">Jul</string>
    <string name="month_medium_august">Aug</string>
    <string name="month_medium_september">Sep</string>
    <string name="month_medium_october">Oct</string>
    <string name="month_medium_november">Nov</string>
    <string name="month_medium_december">Dec</string>
    <string name="month_shortest_january">J</string>
    <string name="month_shortest_february">F</string>
    <string name="month_shortest_march">M</string>
    <string name="month_shortest_april">A</string>
    <string name="month_shortest_may">M</string>
    <string name="month_shortest_june">J</string>
    <string name="month_shortest_july">J</string>
    <string name="month_shortest_august">A</string>
    <string name="month_shortest_september">S</string>
    <string name="month_shortest_october">O</string>
    <string name="month_shortest_november">N</string>
    <string name="month_shortest_december">D</string>
    <string name="day_of_week_long_sunday">Sunday</string>
    <string name="day_of_week_long_monday">Monday</string>
    <string name="day_of_week_long_tuesday">Tuesday</string>
    <string name="day_of_week_long_wednesday">Wednesday</string>
    <string name="day_of_week_long_thursday">Thursday</string>
    <string name="day_of_week_long_friday">Friday</string>
    <string name="day_of_week_long_saturday">Saturday</string>
    <string name="day_of_week_medium_sunday">Sun</string>
    <string name="day_of_week_medium_monday">Mon</string>
    <string name="day_of_week_medium_tuesday">Tue</string>
    <string name="day_of_week_medium_wednesday">Wed</string>
    <string name="day_of_week_medium_thursday">Thu</string>
    <string name="day_of_week_medium_friday">Fri</string>
    <string name="day_of_week_medium_saturday">Sat</string>
    <string name="day_of_week_short_sunday">Su</string>
    <string name="day_of_week_short_monday">Mo</string>
    <string name="day_of_week_short_tuesday">Tu</string>
    <string name="day_of_week_short_wednesday">We</string>
    <string name="day_of_week_short_thursday">Th</string>
    <string name="day_of_week_short_friday">Fr</string>
    <string name="day_of_week_short_saturday">Sa</string>
    <string name="day_of_week_shortest_sunday">S</string>
    <string name="day_of_week_shortest_monday">M</string>
    <string name="day_of_week_shortest_tuesday">T</string>
    <string name="day_of_week_shortest_wednesday">W</string>
    <string name="day_of_week_shortest_thursday">T</string>
    <string name="day_of_week_shortest_friday">F</string>
    <string name="day_of_week_shortest_saturday">S</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hour_minute_24" formatted="false">%H:%M</string>
    <string name="hour_minute_ampm" formatted="false">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm" formatted="false">%-l:%M%^p</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">HH:mm</string>
    <string name="numeric_date" formatted="false">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="month_day" formatted="false">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_year_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s, %4$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="same_month_md1_md2">%2$s %3$s – %8$s</string>
    <string name="same_month_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_mdy1_mdy2">%2$s %3$s – %7$s %8$s, %9$s</string>
    <string name="same_month_mdy1_mdy2">%2$s %3$s – %8$s, %9$s</string>
    <string name="same_year_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="short_format_month">%b</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="back_button_label">Back</string>
    <string name="skip_button_label">Skip</string>
    <string name="next_button_label">Next</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_query">Search query</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="reboot_system">重启手机</string>
    <string name="reboot_confirm">您的手机会重启</string>
    <string name="shutdown_progress">正在关机...</string>
    <string name="cutToast">cut success</string>
    <string name="copyToast">copy success</string>
    <string name="tx_lock_date_format">EEEE M月dd日</string>
    <string name="tx_lunar_format">农历{0}{1}月{2}</string>
    <string name="tx_lunar_date_format">{0}年{1}月{2}日</string>
    <string name="tx_lunar_string">闰</string>
    <string name="tx_chinesenumber">一,二,三,四,五,六,七,八,九,十,十一,十二</string>
    <string name="tx_tens">初,十,廿,卅</string>
    <string name="tx_ten">初十</string>
    <string name="tx_lock_format_ringcontent">响铃{0}秒</string>
    <string name="tx_lock_morning">早晨</string>
    <string name="tx_lock_am">上午</string>
    <string name="tx_lock_pm">下午</string>
    <string name="tx_lock_noon">中午</string>
    <string name="tx_lock_evening">傍晚</string>
    <string name="tx_lock_night">晚上</string>
    <string name="tx_lock_early_morning">凌晨</string>
    <string name="tx_more">...</string>
    <string name="tx_msg_more">N</string>
    <string name="tx_lock_format_battery">正在充电{0}%</string>
    <string name="tx_lock_battery_complete">充电完成</string>
    <string name="tx_mms">[彩信]{0}</string>
    <string name="tx_mms_nosub">无主题</string>
    <string name="tx_previewinfo_sms">向上拖动进入信息</string>
    <string name="tx_previewinfo_phone">向上拖动进入电话</string>
    <string name="china_mobile">中国移动</string>
    <string name="china_unicom">中国联通</string>
    <string name="china_telecom">中国电信</string>
    <string name="no_service">无服务</string>
    <string name="choose_ring_title">手机铃声</string>
    <string name="choose_notification_title">通知铃声</string>
    <string name="choose_alarm_title">闹钟铃声</string>
    <string name="choose_other_ringtone">选择其他铃声或歌曲</string>
    <string name="menu_done">保存</string>
    <string name="menu_doNotSave">取消</string>
    <string name="pick_other_ring_title">其他铃声</string>
    <string name="ring_empty">无相关铃声</string>
    <string name="text_selectWord">select</string>
    <string name="current_ring">当前铃声</string>
    <string name="update_sdcard">更新SD卡数据中...</string>
    <string name="silent_mode_silent">Ringer off</string>
    <string name="silent_mode_vibrate">Ringer vibrate</string>
    <string name="silent_mode_ring">Ringer on</string>
    <string name="select_input_method">Choose Input Method</string>
    <string name="hardware">Hardware</string>
    <string name="use_physical_keyboard">Physical keyboard</string>
</resources>