<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/second_item_background_holo_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/global_option1" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_silent">
        <ImageView android:layout_gravity="center" android:background="@drawable/silent_mode_indicator" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="6.0dip" android:src="@drawable/ic_audio_vol_mute" android:scaleType="center" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:id="@id/global_option2" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_vibrate">
        <ImageView android:layout_gravity="center" android:background="@drawable/silent_mode_indicator" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="6.0dip" android:src="@drawable/ic_audio_ring_notif_vibrate" android:scaleType="center" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:id="@id/global_option3" android:focusable="true" android:layout_width="64.0dip" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_ring">
        <ImageView android:layout_gravity="center" android:background="@drawable/silent_mode_indicator" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="6.0dip" android:src="@drawable/ic_audio_vol" android:scaleType="center" />
    </LinearLayout>
</LinearLayout>