<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:minHeight="48.0dip">
        <com.android.internal.widget.DialogTitle android:ellipsize="end" android:id="@id/alertTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="8.0dip" android:text="@string/select_input_method" android:singleLine="true" style="@style/DialogWindowTitle.qrom.Second" />
        <ImageView android:gravity="fill_horizontal" android:layout_width="fill_parent" android:layout_height="1.0px" android:src="@drawable/list_divider_holo_light" android:scaleType="fitXY" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/hard_keyboard_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@android:color/holo_blue_light" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:ellipsize="marquee" android:gravity="center_vertical" android:orientation="vertical" android:background="?android:selectableItemBackground" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall" android:layout_weight="1.0">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorAlertDialogListItem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardware" android:singleLine="true" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorAlertDialogListItem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_physical_keyboard" android:singleLine="true" />
            </LinearLayout>
            <Switch android:layout_gravity="center_vertical" android:id="@id/hard_keyboard_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/titleDivider" android:background="@drawable/list_divider_holo_light" android:layout_width="fill_parent" android:layout_height="1.0px" />
</LinearLayout>